--- a/JMENA/webapps/resource/css/jquery-ui.css
+++ b/JMENA/webapps/resource/css/jquery-ui.css
@@ -932,7 +932,7 @@ html .ui-button.ui-state-disabled:active {
 	border: 1px solid #aed0ea;
 	background: #d7ebf9 url("../images/ui-bg_glass_80_d7ebf9_1x400.png") 50% 50% repeat-x;
 	font-weight: bold;
-	color: #2779aa;
+	color: #000000;
 }
 .ui-state-default a,
 .ui-state-default a:link,
